tdf#96080 PDF Import: fix incorrect whitespace characters sequence

Change-Id: I0f8e0217cb661be318af611216191def1b209ea1
Reviewed-on: https://gerrit.libreoffice.org/26426
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>