sdext/source/pdfimport/xpdfwrapper/pdfioutdev_gpl.cxx
@@ -873,6 +873,13 @@ void PDFOutDev::drawChar(GfxState *state, double x, double y,
     if( u == nullptr )
         return;
 
+    // Fix for tdf#96080
+    if (uLen == 4 && u[0] == '\t' && u[1] == '\r' && u[2] == ' ' && u[3] == 0xA0)
+    {
+        u += 2;
+        uLen = 1;
+    }
+
     double csdx = 0.0;
     double csdy = 0.0;
     if (state->getFont()->getWMode())
